--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
   "devDependencies": {
     "@babel/core": "7.24.4",
     "@babel/eslint-parser": "7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
     "chai": "5.1.0",
     "eslint": "8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.29.1",
     "stylelint": "16.3.1",
     "stylelint-config-standard": "36.0.0"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
